Separated Cors configuration in new CorsConfig class to separate concerns