@@ -1,12 +1,17 @@
 package dev.marko.EmailSender.security;
 
+import dev.marko.EmailSender.entities.Role;
 import dev.marko.EmailSender.entities.User;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
+@Getter
 public class UserDetailsImpl implements UserDetails {
 
     private final User user;
@@ -21,9 +26,14 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
-    }
+        Role role = user.getRole();
+        if (role == null) return Collections.emptyList();
 
+        // Spring Security expects ROLE_ prefix
+        String roleName = "ROLE_" + role.name();
+        return Collections.singletonList(new SimpleGrantedAuthority(roleName));
+
+    }
 
     @Override
     public String getPassword() {
@@ -52,6 +62,7 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return true;
+        // using Boolean class to turn null values to false and to avoid NullPointerException
+        return Boolean.TRUE.equals(user.getEnabled());
     }
 }
